# philosophers

./: .gitignore  CMakeLists.txt  README.md  author  main.c  philo_one.c
philo_one/: Makefile  config.c  monitor.c  philo_one  philo_one.c  philo_one.h  philo_two.c  philosopher.c  print.c  time.c  utils.c
philo_one/includes/: philo_one.h
philo_one/srcs/: clean.c  config.c  monitor.c  philo_one.c  philosopher.c  print.c  thinking.c  time.c  utils1.c  utils2.c
philo_three/: Makefile  config.c  monitor.c  philo_three  philo_three.c  philo_three.h  philosopher.c  print.c  time.c  utils.c  utils1.c
philo_three/includes/: philo_three.h
philo_three/srcs/: clean.c  config.c  monitor.c  philo_three.c  philosopher.c  print.c  time.c  utils1.c  utils2.c
philo_two/: Makefile  clean.c  config.c  monitor.c  philo_two  philo_two.c  philo_two.h  philosopher.c  print.c  time.c  utils.c  utils1.c
philo_two/includes/: philo_two.h
philo_two/srcs/: clean.c  config.c  monitor.c  philo_two.c  philosopher.c  print.c  thinking.c  time.c  utils1.c  utils2.c
